agregado media queries

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </header>
 <!-- Main -->
   <main class='main'>
+    <!-- Titulo -->
     <div class="main__titulo">    
       <h1>¡Bienvenido/a a mi perfil!</h1>
     </div>
@@ -71,7 +72,7 @@
     <!-- Contacto -->
     <section class="main__contacto">
       <a name='contacto'></a>
-      <h2>¡Contactame!</h2>
+      <h2>Mis redes sociales</h2>
       <div class="contactos">
         <a href="https://wa.me/1127054013" target='_blank'><img src="./assets/whatsapp.png" alt="whatsapp" class='contactos__img'></a>
         <a href="https://www.instagram.com/soymakuuu/" target='_blank'><img src="./assets/ig.png" alt="instagram" class='contactos__img'></a>
